# PrivFedTalk

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
assets/pretrained/: README.md
assets/templates/: table_template.tex
configs/: default.yaml  hdtf_finetune.yaml  hdtf_from_fedbest.yaml  lrs3_central.yaml  lrs3_fedavg_2gpu_lowmem.yaml  lrs3_fedavg_500.yaml  lrs3_fedavg_adapters.yaml  lrs3_federated.yaml  lrs3_fedprox_500.yaml  lrs3_fedprox_adapters.yaml  lrs3_privfedtalk.yaml  lrs3_privfedtalk_1gpu_lowmem.yaml  lrs3_privfedtalk_1gpu_short_gpu0.yaml  lrs3_privfedtalk_1gpu_smoke.yaml  lrs3_privfedtalk_2gpu_lowmem.yaml  lrs3_privfedtalk_2gpu_lowmem_long.yaml  lrs3_privfedtalk_2gpu_rhel.yaml  lrs3_privfedtalk_2gpu_smoke.yaml  lrs3_privfedtalk_2gpu_smoke_v2.yaml  lrs3_privfedtalk_500.yaml  lrs3_privfedtalk_500all.yaml  lrs3_privfedtalk_optionB.yaml  lrs3_privfedtalk_v3_final.yaml  lrs3_versionA.yaml
configs/data/: hdtf.yaml  ravdess.yaml  voxceleb.yaml
configs/eval/: metrics.yaml  qual_samples.yaml
experiments/: README.md  conftest.py  exp_dp_clip_noise.py  exp_end2end_round.py  exp_lora_injection.py  exp_secureagg_mock.py  exp_tdc_loss.py
outputs/: README.md
scripts/: 00_check_env.sh  01_download_assets.sh  02_prepare_data.sh  03_train_federated.sh  04_eval_all.sh  05_make_paper_figures.sh  export_latex_tables.py  infer_personalized.py  make_paper_qualitative_grid.py  make_publishable_ref_gt_figure.py  make_qualitative_sheet.py  render_qualitative_png.py  run_client.py  run_round.py  run_server.py  train_federated_2gpu.py
(+140 files in other folders)
