[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privfedtalk"
version = "0.1.0"
description = "Federated diffusion THG with LoRA adapters, ISFA, TDC, DP + secure aggregation (simulation)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Soumya Mazumdar"}]
license = {text="MIT"}
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchaudio>=2.2.0",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "opencv-python>=4.8",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scipy>=1.11",
  "einops>=0.7",
  "rich>=13.7"
]

[project.scripts]
privfedtalk-train = "privfedtalk.cli.train_federated:main"
privfedtalk-eval  = "privfedtalk.cli.eval:main"
privfedtalk-infer = "privfedtalk.cli.infer:main"
privfedtalk-export = "privfedtalk.cli.export_artifacts:main"

[tool.setuptools]
package-dir = {"" = "src"}
